# Generated by Django 6.0.7 on 2026-08-06 18:38

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('accounts', '0002_user_created_at_user_updated_at'),
    ]

    operations = [
        migrations.CreateModel(
            name='Follow',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('follower', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='following', to=settings.AUTH_USER_MODEL)),
                ('following', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='followers', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'indexes': [models.Index(fields=['follower'], name='ix_follow_follower'), models.Index(fields=['following'], name='ix_follow_following')],
                'constraints': [models.UniqueConstraint(fields=('follower', 'following'), name='uq_follow_pair'), models.CheckConstraint(condition=models.Q(('follower', models.F('following')), _negated=True), name='ck_follow_no_self_follow')],
            },
        ),
    ]
