# Generated by Django 6.1 on 2026-08-25 08:37

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('tweets', '0002_like'),
    ]

    operations = [
        migrations.CreateModel(
            name='Media',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('url', models.URLField(max_length=500)),
                ('media_type', models.CharField(choices=[('IMAGE', 'Image'), ('GIF', 'Gif'), ('VIDEO', 'Video')], max_length=20)),
                ('position', models.SmallIntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('tweet', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='media', to='tweets.tweet')),
            ],
            options={
                'ordering': ['position'],
                'indexes': [models.Index(fields=['tweet'], name='ix_media_tweet')],
            },
        ),
    ]
